--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "main": "main.js",
   "bugs": {
-    "url": "hhttps://github.com/thewhobox/ioBroker.emby/issues"
+    "url": "https://github.com/thewhobox/ioBroker.emby/issues"
   },
   "readmeFilename": "README.md"
 }
