--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   ],
   "homepage": "https://github.com/thewhobox/ioBroker.emby",
   "license": "MIT",
-  "keywords": ["emby", "server", "media", "video"],
+  "keywords": [
+    "emby",
+    "server",
+    "media",
+    "video"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/thewhobox/ioBroker.emby"
@@ -22,6 +27,10 @@
   "dependencies": {
     "request": "^2.88.0",
     "websocket": "^1.0.23"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.0",
+    "axios": "^0.18.0"
   },
   "main": "main.js",
   "bugs": {
