--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.1",
   "description": "Emby",
   "author": {
-    "name": "Mike",
+    "name": "thewhobox",
     "email": "admin@mikegerst.de"
   },
   "contributors": [
     {
-      "name": "Mike",
+      "name": "thewhobox",
       "email": "admin@mikegerst.de"
     }
   ],
@@ -21,11 +21,12 @@
   },
   "dependencies": {
     "request": "^2.88.0",
-    "websocket": "^1.0.23"
+    "websocket": "^1.0.23",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "chai": "^4.1.2"
+    "mocha": "^6.0.2",
+    "chai": "^4.2.0"
   },
   "main": "main.js",
   "bugs": {
