--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     {
       "name": "thewhobox",
       "email": "admin@mikegerst.de"
-    }
+    },
+    {
+        "name": "iobroker-community-adapters",
+        "email": "mcm57@gmx.at"
+      }
   ],
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
-  "homepage": "https://github.com/thewhobox/ioBroker.emby",
+  "homepage": "https://github.com/iobroker-community-adapters/ioBroker.emby",
   "license": "MIT",
   "keywords": [
     "emby",
@@ -23,7 +26,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/thewhobox/ioBroker.emby"
+    "url": "https://github.com/iobroker-community-adapters/ioBroker.emby"
+  },
+  "engines": {
+    "node": ">= 16"
   },
   "dependencies": {
     "request": "^2.88.0",
@@ -31,15 +37,45 @@
     "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
-    "mocha": "^6.0.2",
-    "chai": "^4.2.0"
+    "@alcalzone/release-script": "^3.6.0",
+    "@alcalzone/release-script-plugin-iobroker": "^3.6.0",
+    "@alcalzone/release-script-plugin-license": "^3.5.9",
+    "@alcalzone/release-script-plugin-manual-review": "^3.5.9",
+    "@iobroker/adapter-dev": "^1.2.0",
+    "@iobroker/testing": "^4.1.0",
+    "@tsconfig/node14": "^14.1.0",
+    "@types/chai": "^4.3.8",
+    "@types/chai-as-promised": "^7.1.6",
+    "@types/mocha": "^10.0.2",
+    "@types/node": "^20.8.6",
+    "@types/proxyquire": "^1.3.29",
+    "@types/sinon": "^10.0.16",
+    "@types/sinon-chai": "^3.2.10",
+    "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "mocha": "^10.2.0",
+    "prettier": "^3.0.3",
+    "proxyquire": "^2.1.3",
+    "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0",
+    "typescript": "~5.2.2"
   },
   "main": "main.js",
-  "bugs": {
-    "url": "https://github.com/thewhobox/ioBroker.emby/issues"
-  },
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --exit"
+    "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
+    "test:package": "mocha test/package --exit",
+    "test:integration": "mocha test/integration --exit",
+    "test": "npm run test:js && npm run test:package",
+    "check": "tsc --noEmit -p tsconfig.check.json",
+    "lint": "eslint .",
+    "translate": "translate-adapter",
+    "release": "release-script"
+  },
+  "bugs": {
+    "url": "https://github.com/iobroker-community-adapters/ioBroker.emby/issues"
   },
   "readmeFilename": "README.md"
 }
