--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.emby",
-  "version": "1.0.5",
+  "version": "1.1.0-alpha.0",
   "description": "Emby",
   "author": {
     "name": "thewhobox",
@@ -12,9 +12,9 @@
       "email": "admin@mikegerst.de"
     },
     {
-        "name": "iobroker-community-adapters",
-        "email": "mcm57@gmx.at"
-      }
+      "name": "iobroker-community-adapters",
+      "email": "mcm57@gmx.at"
+    }
   ],
   "homepage": "https://github.com/iobroker-community-adapters/ioBroker.emby",
   "license": "MIT",
