--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     {
       "name": "iobroker-community-adapters",
-      "email": "mcm57@gmx.at"
+      "email": "iobroker-community-adapters@gmx.de"
     }
   ],
   "homepage": "https://github.com/iobroker-community-adapters/ioBroker.emby",
@@ -29,7 +29,7 @@
     "url": "https://github.com/iobroker-community-adapters/ioBroker.emby"
   },
   "engines": {
-    "node": ">= 16"
+    "node": ">= 18"
   },
   "dependencies": {
     "request": "^2.88.0",
